wrap project title to prevent loosing project id number
closes #96

[ci-skip]

--- a/src/app/project/resources/ProjectDetails.styl
+++ b/src/app/project/resources/ProjectDetails.styl
@@ -2,9 +2,6 @@
     .title
         color #fff
         max-width 260px
-        overflow-x hidden
-        text-overflow ellipsis
-        white-space nowrap
         margin-top 6px
     .projectStatus
         padding: 5px 7px
